@@ -4,6 +4,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class UnmodifiableCollection {
@@ -23,7 +24,7 @@ public class UnmodifiableCollection {
 		List<Integer> myList = IntStream.rangeClosed(1, 10) //
 				.map(t -> ThreadLocalRandom.current().nextInt(0, 30))//
 				.boxed() //
-				.toList();
+				.collect(Collectors.toList());
 		// List<Integer> myList = IntStream.rangeClosed(1, 10).boxed().toList();
 		System.out.println(myList);
 		System.out.println(isUnmodifiable(myList));
